Eliminar Java 11 APIs